# aionfm

./: Cargo.toml  README.md
.github/workflows/: ci.yml
crates/adapter/: Cargo.toml
crates/adapter/src/: adapter.rs  calibration.rs  lib.rs  registry.rs  workflow.rs
crates/data/: Cargo.toml
crates/data/src/: lib.rs  loader.rs  metadata.rs  missing.rs  normalization.rs  patch.rs  stream.rs
crates/model/: Cargo.toml
crates/model/src/: attention.rs  config.rs  constraints.rs  embedding.rs  fusion.rs  heads.rs  lib.rs  memory.rs  naive.rs  traits.rs
crates/retrieval/: Cargo.toml
crates/retrieval/src/: corpus.rs  index.rs  lib.rs  similarity.rs
crates/serving/: Cargo.toml
crates/serving/src/: engine.rs  lib.rs  main.rs  monitoring.rs  reconciliation.rs  sampler.rs
crates/tokenization/: Cargo.toml
crates/tokenization/src/: features.rs  lib.rs  quantizer.rs  residual.rs  tokenizer.rs  vocabulary.rs
crates/training/: Cargo.toml
crates/training/src/: checkpoint.rs  lib.rs  losses.rs  optimizer.rs  synthetic.rs  trainer.rs
crates/utils/: Cargo.toml
crates/utils/src/: error.rs  forecast.rs  lib.rs  types.rs  validation.rs
docs/: architecture.md
examples/energy_demo/: README.md
examples/retail_demo/: README.md
scripts/: check.sh
tests/: README.md
