[package]
name = "aionfm-adapter"
description = "Domain adaptation, adapter registry, and calibration for AionFM."
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
aionfm-data.workspace = true
aionfm-model.workspace = true
aionfm-utils.workspace = true
serde.workspace = true
uuid.workspace = true
